Fix galleries pictures Fix slider on iphone

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -279,8 +279,8 @@ p {
 .box {
     align-items: center;
     color:  #9f9696;
-    display: flex;
-    flex-direction: column;
+    /*display: flex;*/
+    /*flex-direction: column;*/
     height: 100%;
     margin: 0 0 1em 0;
     padding: 5px;
@@ -301,7 +301,7 @@ p {
 
 .work {
     display: flex;
-    height: 100%;
+    /*height: 100%;*/
     margin-bottom: .3em;
     object-fit: contain;
     width: 100%;
@@ -736,8 +736,8 @@ copied from https://css-tricks.com/custom-scrollbars-in-webkit/
 
 @media screen and (orientation: landscape) {
     .box {
-        margin: 1em auto;
-        max-width: 33%;
+        /*margin: 1em auto;*/
+        width: 33%;
     }
 
     .buttonHolder{
